--- a/app/public/wp-content/themes/portfolio-theme/style.css
+++ b/app/public/wp-content/themes/portfolio-theme/style.css
@@ -5,5 +5,5 @@ Author: Grace Gamble
 Version: 1.0
 Author URI: https://github.com/ghgamble
 Description: A simple portfolio theme layout
-Text domain: Portfolio
+Text domain: portfolio
 */
