js and finalize gulp

--- a/app/public/wp-content/themes/portfolio-theme/style.css
+++ b/app/public/wp-content/themes/portfolio-theme/style.css
@@ -1,9 +1,9 @@
 /*
-Theme Name: Portfolio
+Theme Name: _themename
 Theme URI: https://github.com/ghgamble
 Author: Grace Gamble
 Version: 1.0
 Author URI: https://github.com/ghgamble
-Description: A simple portfolio theme layout
-Text domain: portfolio
+Description: A simple _themename theme layout
+Text domain: _themename
 */
