user roles/delete a post

--- a/app/public/wp-content/themes/portfolio/src/assets/scss/components/_header.scss
+++ b/app/public/wp-content/themes/portfolio/src/assets/scss/components/_header.scss
@@ -131,5 +131,14 @@
         img {
             max-width: 200px;
         }
+        a {
+            border-bottom: none;
+        }
+        a:hover {
+            border-bottom: none;
+        }
+        a:visited {
+            border-bottom: none;
+        }
     }
 }
