--- a/app/public/wp-content/themes/portfolio/src/assets/scss/components/_search-form.scss
+++ b/app/public/wp-content/themes/portfolio/src/assets/scss/components/_search-form.scss
@@ -11,3 +11,9 @@
         height: 40px;
     }
 }
+
+@media only screen and (max-width: 600px) {
+    .c-search-form {
+        display: none;
+    }
+}
