--- a/app/public/wp-content/themes/portfolio/src/assets/scss/bundle.scss
+++ b/app/public/wp-content/themes/portfolio/src/assets/scss/bundle.scss
@@ -31,6 +31,7 @@ $fa-font-path: '../../../node_modules/@fortawesome/fontawesome-free/webfonts';
 @import './components/comment';
 @import './components/search-form';
 @import './components/nav-links';
+@import './components/mobile-nav';
 
 @import './utils/helpers';
 @import './utils/flex';
