--- a/app/public/wp-content/themes/portfolio/src/assets/scss/components/_mobile-nav.scss
+++ b/app/public/wp-content/themes/portfolio/src/assets/scss/components/_mobile-nav.scss
@@ -15,7 +15,7 @@
     }
 }
     
-@media screen and (max-width: 600px) {
+@media only screen and (max-width: 600px) {
     #site-navigation {
         display: block;
     }
